--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@ and moved to its current stadium, Old Trafford, in 1910.
 <marquee class="him" >him</marquee>
 
 
-
+<script type="text/javascript">
+console.log('hello world');  
+</script>
 
 
 
