--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ and moved to its current stadium, Old Trafford, in 1910.
 
 
 <script type="text/javascript">
-console.log('hello world');  
+console.log('hello');  
 </script>
 
 
