--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ and moved to its current stadium, Old Trafford, in 1910.
 <marquee class="him" >him</marquee>
 
 
-<script type="text/javascript">
-console.log('hello');  
+<script src="index.js" type="text/javascript">
+ 
 </script>
 
 
